# platformer-level-editor-project

./: .gitignore  CMakeLists.txt  Editor.md  Readme.md  grid_selection.cpp  grid_selection.h  grid_undo.cpp  grid_undo.h  grid_widget.cpp  grid_widget.h  main.cpp  main_window.cpp  main_window.h  splash_screen.cpp  splash_screen.h  tile_toolbar.cpp  tile_toolbar.h  utilities.h  welcome_screen.cpp  welcome_screen.h
